# kaizen-recsys

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  justfile  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ann_bench.yml  build_wheel.yml  release.yml  request_devin_review.yml
benches/: README.md  ann_retrieval.rs
cr_fease/: Databricks_Training_Notebook.ipynb  __init__.py  fease_train.py  fease_wrapper.py  inference.py  schemas.py  train.py
docs/adr/: 0001-multi-model-architecture.md  0002-training-parallelism.md  0003-pyo3-surface-organization.md  0004-retrieval-index-seam.md
docs/design/: phase-1-recmodel-trait.md
docs/guides/: model-comparison.md
docs/research/: burn-sasrec-twotower-research.md
docs/superpowers/plans/: 2026-06-01-onnx-export.md  2026-06-19-pyspark-ease.md  2026-06-23-ann-retrieval-phase2.md
docs/superpowers/specs/: 2026-06-01-onnx-export-design.md  2026-06-19-pyspark-ease-design.md
kzn_recsys/: Databricks_Training_Notebook.ipynb  __init__.py  fease_train.py  fease_wrapper.py  inference.py  train.py
kzn_recsys/onnx_export/: __init__.py  _graph.py  _graph_two_tower.py  _mlflow.py  _quantize.py  _repeat_affinity.py  _vocab.py
kzn_recsys/spark/: __init__.py  dataframes.py  ease_core.py  feas_codec.py  gram.py  metrics.py  model.py  splits.py  tuning.py
notebooks/: 01_training_quickstart.ipynb  02_evaluation_metrics.ipynb  03_deployment_artifact.ipynb  04_online_inference_wpo.py  05_production_serving_stub.py
packaging/pure-python/: README.md  pyproject.toml
research/: silver_torch_research.md
src/: advanced_entry.rs  advanced_pipeline.rs  data_pipeline.rs  data_validation.rs  evaluation.rs  layout.rs  lib.rs  metrics.rs  model.rs  onnx_export.rs  schemas.rs  serialization.rs  serving.rs  transform.rs  tuning.rs  weighting.rs
src/ann/: comparison.rs  exact.rs  mod.rs  turbovec_backend.rs  usearch_backend.rs
src/data/: mod.rs  sequences.rs  triples.rs
src/models/: ease.rs  mod.rs  sasrec.rs  two_tower.rs
src/py/: eval.rs  metrics.rs  mod.rs  registry.rs
src/schema/: account.rs  engagement.rs  schemas.rs  subscriptions.rs
src/schemas/: account.rs  content.rs  engagement.rs  mod.rs  schemas.rs  subscriptions.rs
tests/: test_layout.py  test_model.py  test_onnx_export.py  test_onnx_two_tower.py  test_registry_heterogeneous.py  test_sasrec.py  test_transform.py  test_two_tower.py
tests/fixtures/: expected.json  fixture.onnx  inputs.json  model_v1.fease  model_v2.fease  two_tower_expected.json  two_tower_fixture.onnx  two_tower_inputs.json
tests/spark/: conftest.py  test_dataframes.py  test_ease_core.py  test_feas_codec.py  test_gram_distributed.py  test_metrics.py  test_model.py  test_optional_native.py  test_parity.py  test_splits.py  test_tuning.py
