[workspace]

[package]
name = "rust_fease_recommender" # Changed name to be a valid Python module
version = "0.1.0"
edition = "2024"

# Define as a Python library
[lib]
name = "rust_fease_recommender"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.100"
bincode = "1.3"
nalgebra = { version = "0.34.1", features = ["serde-serialize"] }
log = "0.4"
polars = { version = "0.52.0", features = ["csv", "dtype-full", "lazy", "parquet", "timezones"] }
rayon = "1.10"
pyo3 = { version = "0.27.1", features = ["extension-module"] }
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
sprs = "0.11.4"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
