[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "kzn_recsys"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "polars>=1.8.2",
    "pydantic>=2.10.6",
]

[tool.maturin]
module-name = "kzn_recsys._native"
python-source = "."
# abi3-py38: build a single Python-version-agnostic wheel that works on
# CPython 3.8+. Wheel filename will be `kzn_recsys-<ver>-cp38-abi3-<plat>.whl`
# instead of one wheel per minor version. Trades off: cannot use APIs
# stabilized after Python 3.8.
features = ["pyo3/extension-module", "pyo3/abi3-py38"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
